# TheWarrior

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  conanfile.txt  runCodeCoverage.sh
commonEditor.UI/test/: CMakeLists.txt  editTextureFormController_unittest.cpp  manageTexturesController_unittest.cpp  monsterUtils_unittest.cpp  textureUtils_unittest.cpp
itemEditor.Controllers/test/: CMakeLists.txt  addArmorItemController_unittest.cpp  addItemController_unittest.cpp  addStatsItemController_unittest.cpp  addWeaponItemController_unittest.cpp  editTextureFormController_unittest.cpp  mainController_unittest.cpp  manageArmorItemController_unittest.cpp  manageItemController_unittest.cpp  manageStatsItemController_unittest.cpp  manageTexturesController_unittest.cpp  manageWeaponItemController_unittest.cpp  texturePickerController_unittest.cpp
mapEditor/: CMakeLists.txt
mapEditor.Controllers/: CMakeLists.txt
mapEditor.Controllers/include/: editItemStoreController.hpp  editMapTileTriggerFormController.hpp  editMonsterEncounterFormController.hpp  editMonsterZoneFormController.hpp  glComponentController.hpp  itemStoreInfo.hpp  itemStoreInfoJSONSerializer.hpp  mainController.hpp  manageItemStoreController.hpp  manageMonsterStoreController.hpp  mapTileDTO.hpp  mapTileDTOUtils.hpp  mapTileTriggerDTO.hpp  mapTileTriggerDTOUtils.hpp  monsterEncounterDTO.hpp  monsterPickerFormController.hpp  monsterStoreInfo.hpp  monsterStoreInfoJSONSerializer.hpp  monsterZoneDTO.hpp  monsterZoneDTOUtils.hpp  monsterZoneListComponentController.hpp  textureSelectionComponentController.hpp  tilePropsComponentController.hpp  toolbarStateInfo.hpp  toolbarStateInfoJSONSerializer.hpp  types.hpp
mapEditor.Controllers/src/: editItemStoreController.cpp  editMapTileTriggerFormController.cpp  editMonsterEncounterFormController.cpp  editMonsterZoneFormController.cpp  glComponentController.cpp  itemStoreInfoJSONSerializer.cpp  mainController.cpp  manageItemStoreController.cpp  manageMonsterStoreController.cpp  mapTileDTOUtils.cpp  mapTileTriggerDTOUtils.cpp  monsterPickerFormController.cpp  monsterStoreInfoJSONSerializer.cpp  monsterZoneDTOUtils.cpp  monsterZoneListComponentController.cpp  textureSelectionComponentController.cpp  tilePropsComponentController.cpp  toolbarStateInfoJSONSerializer.cpp
mapEditor.Controllers/test/: CMakeLists.txt  containerOfMonsterStoreTestUtils.cpp  containerOfMonsterStoreTestUtils.hpp  editMapTileTriggerFormController_unittest.cpp  editMonsterEncounterFormController_unittest.cpp  editMonsterZoneFormController_unittest.cpp  glComponentController_unittest.cpp  itemStoreInfoJSONSerializer_unittest.cpp  mainController_unittest.cpp  manageItemStoreController_unittest.cpp  manageMonsterStoreController_unittest.cpp  mapTileDTOUtils_unittest.cpp  monsterPickerFormController_unittest.cpp  monsterStoreInfoJSONSerializer_unittest.cpp  monsterZoneDTOUtils_unittest.cpp  monsterZoneListComponentController_unittest.cpp  textureSelectionComponentController_unittest.cpp  tilePropsComponentController_unittest.cpp  toolbarStateInfoJSONSerializer_unittest.cpp
mapEditor/res/: global.qrc  thewarrior.mapeditor.desktop
mapEditor/src/: aboutBoxForm.cpp  aboutBoxForm.hpp  aboutBoxForm.ui  configurationManager.cpp  configurationManager.hpp  constants.cpp  constants.hpp  editItemStoreForm.cpp  editItemStoreForm.hpp  editItemStoreForm.ui  editMapTileTriggerForm.cpp  editMapTileTriggerForm.hpp  editMapTileTriggerForm.ui  editMonsterEncounterForm.cpp  editMonsterEncounterForm.hpp  editMonsterEncounterForm.ui  editMonsterStoreForm.cpp  editMonsterStoreForm.hpp  editMonsterStoreForm.ui  editMonsterZoneForm.cpp  editMonsterZoneForm.hpp  editMonsterZoneForm.ui  editTextureForm.cpp  editTextureForm.hpp  editTextureForm.ui  editTileActionChangeMapPropertiesForm.cpp  editTileActionChangeMapPropertiesForm.hpp  editTileActionChangeMapPropertiesForm.ui  editTileActionOpenChestPropertiesForm.cpp  editTileActionOpenChestPropertiesForm.hpp  editTileActionOpenChestPropertiesForm.ui  errorMessage.cpp  imageAttributionsForm.cpp  imageAttributionsForm.hpp  imageAttributionsForm.ui  itemStoreInfo.hpp  main.cpp  mainForm.cpp  mainForm.hpp  mainForm.ui  (+26 more)
monsterEditor/: CMakeLists.txt
monsterEditor.Controllers/: CMakeLists.txt
monsterEditor.Controllers/include/: editTextureFormController.hpp  mainController.hpp  manageMonsterController.hpp  manageTexturesController.hpp  textureDTO.hpp  texturePickerController.hpp
monsterEditor.Controllers/src/: editTextureFormController.cpp  mainController.cpp  manageMonsterController.cpp  manageTexturesController.cpp  texturePickerController.cpp
monsterEditor.Controllers/test/: CMakeLists.txt  editTextureFormController_unittest.cpp  manageMonsterController_unittest.cpp  manageTexturesController_unittest.cpp  texturePickerController_unittest.cpp
monsterEditor/res/: global.qrc  thewarrior.monstereditor.desktop
monsterEditor/src/: aboutBoxForm.cpp  aboutBoxForm.hpp  aboutBoxForm.ui  constants.cpp  constants.hpp  editMonsterForm.cpp  editMonsterForm.hpp  editMonsterForm.ui  editTextureForm.cpp  editTextureForm.hpp  editTextureForm.ui  imageAttributionsForm.cpp  imageAttributionsForm.hpp  imageAttributionsForm.ui  main.cpp  mainForm.cpp  mainForm.hpp  mainForm.ui  manageTexturesForm.cpp  manageTexturesForm.hpp  manageTexturesForm.ui  texturePickerForm.cpp  texturePickerForm.hpp  texturePickerForm.ui
theWarrior/: CMakeLists.txt
theWarrior.Models/test/: CMakeLists.txt  armorItem_unittest.cpp  gameMap_unittest.cpp  inventory_unittest.cpp  itemStore_unittest.cpp  itemType_unittest.cpp  item_unittest.cpp  mapTileTriggerActionConverter_unittest.cpp  mapTileTriggerConditionConverter_unittest.cpp  mapTileTriggerEventConverter_unittest.cpp  mapTileTrigger_unittest.cpp  mapTile_unittest.cpp  monsterStore_unittest.cpp  monsterZoneMonsterEncounter_unittest.cpp  monsterZone_unittest.cpp  monster_unittest.cpp  playerEquipment_unittest.cpp  player_unittest.cpp  point_unittest.cpp  rgbItemColor_unittest.cpp  size_unittest.cpp  statsItem_unittest.cpp  textureContainer_unittest.cpp  (+2 more)
(+339 files in other folders)
